...
    <string name="login_choose_text">Please choose login method!</string>

    <string name="reminder_title">Reminder Title</string>
    <string name="reminder_desc">Description</string>
    <string name="reminder_location">Reminder Location</string>
    <string name="save">Save</string>
    <string name="reminder_saved">Reminder Saved!</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="reset">Reset List</string>
    <string name="sure_to_delete">Are you sure you want to delete all data. This action cannot be undone!</string>
    <string name="i_am_sure">Yes, delete all!</string>
    <string name="not_sure">Cancel!</string>
...
    <string name="permission_denied_explanation">You need to grant location permission in order to select the location. Please open settings screen to modify app permissions</string>
    <string name="select_location_confirm_button">Confirm</string>
    <string name="detail_reminder_back">Back</string>
    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="settings">Settings</string>
    <string name="geofence_added">Geofence Added</string>
    <string name="geofence_entered">Geofence Entered</string>
    <string name="geofence_removed">Geofence removed</string>
    <string name="geofence_not_removed">Geofence not removed</string>
    <string name="channel_name">GeofenceStatus</string>
    <string name="notification_channel_description">Geofence status notification</string>
    <string name="content_text">Location Reminder</string>
...
